fix pagination display issue on mobile

--- a/src/components/common/Pagination.module.scss
+++ b/src/components/common/Pagination.module.scss
@@ -1,14 +1,17 @@
-// copy/paste from https://codepen.io/iamjustaman/pen/YPLPNR
+// // copy/paste from https://codepen.io/iamjustaman/pen/YPLPNR
 
 .pagination {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   margin: 10px 0;
 
   li {
     background-color: #04091e;
+  }
+
+  li.disabled a {
+    cursor: default;
+    pointer-events: none;
   }
 
   a,
@@ -20,8 +23,6 @@
     font-weight: 300;
     padding-top: 1px;
     text-decoration: none;
-    border: 1px solid rgba(0, 0, 0, .25);
-    border-left-width: 0;
     min-width: 44px;
     min-height: 44px;
     color: rgba(255, 255, 255, .85);
@@ -35,100 +36,14 @@
       border-top-color: rgba(0, 0, 0, .35);
       border-bottom-color: rgba(0, 0, 0, .5);
     }
-
-    a:focus,
-    a:active,
-    span:focus,
-    span:active {
-      box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, .25);
-      border-left-width: 1px;
-    }
-
-  }
-
-  li:first-of-type a,
-  li.first-of-type span {
-    border-left-width: 1px;
   }
 
   li.current a,
   li.current span {
-    padding-top: .25em;
     color: rgba(255, 255, 255, 1);
     background-color: rgba(255, 255, 255, .15);
-    box-shadow: inset 0px 2px 1px 0px rgba(0, 0, 0, .25);
     cursor: default;
     pointer-events: none;
   }
 
-  @media only screen and (max-width: 64.063em) {
-
-    li:first-child,
-    li:last-child {
-      /* screen readers only */
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
-    }
-
-    li:nth-of-type(2) a,
-    li:nth-of-type(2) span {
-      border-left-width: 1px;
-    }
-  }
-
-  @media only screen and (max-width: 40.063em) {
-    li {
-      /* screen readers only */
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
-    }
-
-    li.current,
-    li:first-of-type,
-    li:last-of-type,
-    li:nth-of-type(2),
-    li:nth-last-of-type(2) {
-      position: initial;
-      top: initial;
-      left: initial;
-    }
-
-    li:nth-of-type(2) a,
-    li:nth-of-type(2) span {
-      border-left-width: 0;
-    }
-  }
-
-  @media only screen and (max-width: 30.063em) {
-
-    li:first-child,
-    li:last-child {
-      /* screen readers only */
-      position: absolute;
-      top: -9999px;
-      left: -9999px;
-    }
-
-    li:nth-of-type(2) a,
-    li:nth-of-type(2) span {
-      border-left-width: 1px;
-    }
-
-  }
-
-  @media only screen and (max-width: 15.063em) {
-
-    /* For watches? */
-    li {
-      width: 50%;
-    }
-
-    li.current {
-      order: 2;
-      width: 100%;
-      border-left-width: 1px;
-    }
-  }
 }
